--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Gihad",
   "license": "MIT",
   "dependencies": {
-    "config": "^3.3.1",
+    "config": "^3.3.2",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "mongoose": "^5.10.6",
+    "fetch": "^1.1.0",
+    "mongoose": "^5.10.7",
     "node-fetch": "^2.6.1",
     "request": "^2.88.2",
     "uuid": "^8.3.0"
